--- a/src/views/admin/tipos/add.ejs
+++ b/src/views/admin/tipos/add.ejs
@@ -52,7 +52,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Descripción</label>
-                          <input type="text" name="destip" id="destip" class="form-control text-uppercase" value="" />
+                          <input type="text" name="destip" id="destip" class="form-control text-uppercase" value="" autofocus/>
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
@@ -63,7 +63,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Ayuda</label>
-                          <input type="text" name="ayutip" id="ayutip" class="form-control" value="" autofocus />
+                          <input type="text" name="ayutip" id="ayutip" class="form-control" value="" />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
