--- a/src/views/user/formularios/resueltos/edit.ejs
+++ b/src/views/user/formularios/resueltos/edit.ejs
@@ -26,7 +26,7 @@
 <body>
   <div class="page">
     <%- include('../../../partials/header') %>
-    <%- include('../../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
+    <%- include('../../../partials/navbar', {opcion: 'FORMULARIO' }) %>
     <div class="page-wrapper">
       <div class="page-header d-print-none">
         <div class="container-xl">
@@ -139,8 +139,8 @@
           </div>
         </div>
       </div>
-      <%- include('../../../partials/footer') %>
     </div>
+    <%- include('../../../partials/footer') %>
   </div>
 </body>
 
