--- a/src/views/user/logout.ejs
+++ b/src/views/user/logout.ejs
@@ -19,7 +19,7 @@
         </div>
         <p class="empty-title">Se ha cerrado la sesión</p>
         <p class="empty-subtitle text-muted">
-          gracias por usar Oporrak
+          gracias por usar Formularios
         </p>
         <div class="empty-action">
           <a href="/" class="btn btn-primary">
