--- a/src/views/admin/cargas/add.ejs
+++ b/src/views/admin/cargas/add.ejs
@@ -38,7 +38,7 @@
                 Crear
               </div>
               <h2 class="page-title">
-                Carga CSV
+                Carga
               </h2>
             </div>
           </div>
@@ -126,25 +126,62 @@
           <div class="text-muted">
             <h3>Cabecera</h3>
             <h4>
-              NIF,DESCRIPCION,ADMINISTRACION,TIPO,CONTROL
+              NIF;NOMBRE;EMAIL;TELEFONO;MOVIL;TIPO;EJERCICIO;OFICINA;OBSERVACION;FUNCIONARIO;LIQUIDADOR;ESTADO;CONTROL
             </h4>
-            <h3>Descripción de los campos</h3>
+            <h3>Descripción de campos</h3>
             <h4 class="m-0">
-              Campo NIF de 12 caracteres máximo. No puede ser nulo.
+              Campo nif de 12 caracteres máximo. No puede ser nulo.
             </h4>
             <h4 class="m-0">
-              Campo DESCRIPCION de 255 caracteres máximo. No puede ser nulo. Va
+              Campo nombre de 128 caracteres máximo. No puede ser nulo. Va
               encomillado si existen caracteres especiales.
             </h4>
             <h4 class="m-0">
-              Campo ADMINISTRACION es numérico de 2 posiciones. No puede ser nulo.
+              Campo email de 128 caracteres máximo. Puede ser nulo.
             </h4>
             <h4 class="m-0">
-              Campo TIPO es numério de 1 posición. No puede ser nulo.
-              Puede contener el valor 1, 2 ó 3 por DEDUCIBLE, PRIORITARIA o DEDUCIBLE Y PRIORITARIA respectivamente
+              Campo telefono de 9 caracteres. Puede ser nulo.
             </h4>
             <h4 class="m-0">
-              Campo CONTROL es nulo.
+              Campo movil de 9 caracteres. Puede ser nulo.
+            </h4>
+            <h4 class="m-0">
+              Campo tipo es numério. No puede ser nulo. Debe coincidir con su
+              correspondiente tipo definido en la base de datos
+            </h4>
+            <h4 class="m-0">
+              Campo ejercicio es numério de 4 posiciones. No puede ser nulo.
+            </h4>
+            <h4 class="m-0">
+              Campo oficina es numério. No puede ser nulo. Debe coincidir con
+              su correspondiente oficina definida en la base de datos
+            </h4>
+            <h4 class="m-0">
+              Campo observacion de 4000 caracteres máximo. Puede ser nulo. Va
+              encomillado si existen caracteres especiales.
+            </h4>
+            <h4 class="m-0">
+              Campo funcionario debe contener el texto "SYSTEM".
+            </h4>
+            <h4 class="m-0">
+              Campo liquidador es alfanumérico. No puede ser nulo. Va
+              encomillado. Debe coincidir con su correspondiente userid
+              definido en la base de datos
+            </h4>
+            <h4 class="m-0">
+              Campo estado es numério de 2 posiciones. No puede ser nulo.
+              Puede contener o el valor 0 o el valor 1
+            </h4>
+            <h4 class="m-0">
+              Si el campo estado contiene el valor 0 (registro pendiente) el
+              campo liquidador debe contener el texto "PEND"
+            </h4>
+            <h4 class="m-0">
+              Si el campo estado contiene el valor 1 (registro asignado) el
+              campo liquidador debe contener un userid de liquidador en activo.
+            </h4>
+            <h4 class="m-0">
+              Campo control es nulo.
             </h4>
             <h4 class="m-0 pt-2 text-start">
               Notas:
@@ -153,10 +190,9 @@
               </h4>
               <h4 class="m-0 text-start">
                 Debe existir el fichero que se va a procesar en el directorio
-                m:/filcopy/02051143/INCENTIVOS
+                m:/filcopy/02051143/FRAUDES
               </h4>
             </h4>
-          </div>
         </div>
         <div class="modal-footer">
           <div class="w-100">
