--- a/src/views/admin/formularios/ades/index.ejs
+++ b/src/views/admin/formularios/ades/index.ejs
@@ -9,58 +9,85 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/dots-menu.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/table.css">
+  <link rel="stylesheet" href="/css/pagination.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">  
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/modal.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../../partials/header') %>
     <%- include('../../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
     <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Usuarios
+              </div>
+              <h2 class="page-title">
+                Asignar/Desasignar
+              </h2>
+            </div>
+            <div class="col-auto ms-auto d-print-none">
+              <div class="btn-list">
+                <form action="/admin/formularios/ades" method="GET">  
+                  <div class="input-icon">
+                    <span class="input-icon-addon">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
+                        viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <circle cx="10" cy="10" r="7"></circle>
+                        <line x1="21" y1="21" x2="15" y2="15"></line>
+                      </svg>
+                    </span>
+                    <input type="text" class="form-control d-inline-block me-3" id="buscarUserBox" name="part"
+                      placeholder="Buscar..." aria-label="Buscar en usuarios">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="page-body">
         <div class="container-xl">
           <div class="row">
             <div class="col-12">
-              <div class="card">
-                <div class="card-header">
-                  <h3 class="card-title">Usuarios</h3>
-                  <div class="col-auto ms-auto">
-                    <div class="d-flex">
-                      <form action="/admin/formularios/ades" method="GET">
-                        <div class="input-icon me-3">
-                          <span class="input-icon-addon">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
-                              viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                              stroke-linecap="round" stroke-linejoin="round">
-                              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                              <circle cx="10" cy="10" r="7"></circle>
-                              <line x1="21" y1="21" x2="15" y2="15"></line>
-                            </svg>
-                          </span>
-                          <input type="text" class="form-control d-inline-block me-3" id="buscarUserBox" name="part"
-                            placeholder="Buscar..." aria-label="Buscar en usuarios">
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
+              <div class="card card-md">
                 <div class="card-body">
                   <table class="table table-vcenter table-striped sortable" id="tblUsuarios">
                     <thead>
                       <tr class="header">
                         <th class="w-4"></th>
                         <th>Nombre</th>
-                        <th>Oficina</th>
+                        <th class="w-15">Oficina</th>
                         <th class="w-5"></th>
                       </tr>
                     </thead>
                     <tbody id="table-body">
                     </tbody>
                   </table>
-                </div>
-                <div class="card-footer">
-                  <div id="pagination-wrapper" class="py-1"></div>
-                  <div class="ms-auto d-flex py-1">
-                    <a href="" id="vol" onclick="deleteCookie('filtra');" class="btn btn-white">Volver</a>
+                  <div class="row text-center align-items-center flex-row-reverse">
+                    <div class="col-lg-auto ms-lg-auto">
+                      <div id="pagination-wrapper" class="nav py-1"></div>
+                    </div>
+                    <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+                      <a href="#" id="vol" class="btn btn-white">Volver</a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -73,14 +100,19 @@
   </div>
 
   <script>
-    const orgList = <%- JSON.stringify(datos.usuarios) %>
-    const estados = <%- JSON.stringify(datos.estadosUsuario) %>
-    const cursor = <%- JSON.stringify(datos.cursor) %>
     const hasNexts = <%- datos.hasNexts %>
+  </script>
+  <script>
     const hasPrevs = <%- datos.hasPrevs %>
   </script>
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/indexAdes.min.js"></script>
+  <script>
+    const estados = <%- JSON.stringify(datos.estadosUsuario) %>
+  </script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/formularios/ades/index.js"></script>
+  <script>
+    buildTable(<%- JSON.stringify(datos.usuarios) %>, <%- JSON.stringify(datos.cursor) %>)
+  </script>
 </body>
 
 </html>
