--- a/src/views/admin/formularios/index.ejs
+++ b/src/views/admin/formularios/index.ejs
@@ -44,7 +44,7 @@
             </div>
             <div class="col-auto ms-auto d-print-none">
               <div class="btn-list">
-                <form action="/admin/formularios" method="GET">  
+                <form action="/admin/formularios/asignados" method="GET">  
                   <div class="input-icon">
                     <span class="input-icon-addon">
                       <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
@@ -55,15 +55,21 @@
                         <line x1="21" y1="21" x2="15" y2="15"></line>
                       </svg>
                     </span>
-                    <input type="text" class="form-control d-inline-block me-3" id="buscarForBox" name="part"
+                    <input type="text" class="form-control d-inline-block me-3" id="buscarFormBox" name="part"
                       placeholder="Buscar..." aria-label="Buscar en formularios">
                   </div>
                 </form>
+                <!-- resueltos -->
                 <a href="#" id="rsltos" class="btn btn-outline-success btn-icon" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Resueltos">
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 11l3 3l8 -8" /><path d="M20 12v6a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h9" /></svg>
                 </a>
+                <!-- pendientes -->
                 <a href="#" id="pdnts" class="btn btn-outline-danger btn-icon" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Pendientes">
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24"  height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M14.105 17.915l-2.105 2.085l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 0 1 8.524 5.127" /><path d="M19 22v.01" /><path d="M19 19a2.003 2.003 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483" /></svg>
+                </a>
+                <!-- ades -->
+                <a href="#" id="ades" class="btn btn-outline-primary btn-icon" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Asignar/Desasignar">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M3.6 9h16.8" /><path d="M3.6 15h16.8" /><path d="M11.5 3a17 17 0 0 0 0 18" /><path d="M12.5 3a17 17 0 0 1 0 18" /></svg>
                 </a>
               </div>
             </div>
@@ -129,43 +135,9 @@
                 <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
               </div>
               <div class="col">
-                <form action="" id="del" method="POST">
+                <form action="" id="delet" method="POST">
                   <input type="hidden" id="idborr" name="idform" value="">
                   <button type="submit" class="btn btn-danger w-100">Borrar formulario</button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal modal-blur fade" id="modal-asignar" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        <div class="modal-status bg-warning"></div>
-        <div class="modal-body text-center py-4">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-blue icon-lg" width="24" height="24"
-            viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M12 9v2m0 4v.01"></path>
-            <path d="M5 19h14a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-7.1 12.25a2 2 0 0 0 1.75 2.75"></path>
-          </svg>
-          <h3>Asignar formulario</h3>
-          <div id="msgasi"></div>
-        </div>
-        <div class="modal-footer">
-          <div class="w-100">
-            <div class="row">
-              <div class="col">
-                <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
-              </div>
-              <div class="col">
-                <form action="" id="asig" method="POST">
-                  <input type="hidden" id="idasig" name="idform" value="">
-                  <button type="submit" class="btn btn-warning w-100">Asignar formulario</button>
                 </form>
               </div>
             </div>
@@ -208,12 +180,46 @@
       </div>
     </div>
   </div>
+  <div class="modal modal-blur fade" id="modal-resolver" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal-status bg-primary"></div>
+        <div class="modal-body text-center py-4">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-blue icon-lg" width="24" height="24"
+            viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M12 9v2m0 4v.01"></path>
+            <path d="M5 19h14a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-7.1 12.25a2 2 0 0 0 1.75 2.75"></path>
+          </svg>
+          <h3>Resolver formulario</h3>
+          <div id="msgres"></div>
+        </div>
+        <div class="modal-footer">
+          <div class="w-100">
+            <div class="row">
+              <div class="col">
+                <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
+              </div>
+              <div class="col">
+                <form action="" id="resolv" method="POST">
+                  <input type="hidden" id="idreso" name="idform" value="">
+                  <button type="submit" class="btn btn-primary w-100">Resolver formulario</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script>
-    const hasNexts = <%- datos.hasNextUsers %>
+    const hasNexts = <%- datos.hasNexts %>
   </script>
   <script>
-    const hasPrevs = <%- datos.hasPrevUsers %>
+    const hasPrevs = <%- datos.hasPrevs %>
   </script>
   <script>
     const estados = <%- JSON.stringify(datos.estadosDocumento) %>
