--- a/src/views/admin/formularios/referencias/index.ejs
+++ b/src/views/admin/formularios/referencias/index.ejs
@@ -9,52 +9,80 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/dots-menu.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/table.css">
+  <link rel="stylesheet" href="/css/pagination.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">  
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/modal.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../../partials/header') %>
-    <%- include('../../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
+    <%- include('../../../partials/navbar', {opcion: 'FORMULARIO' }) %>
     <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                <%- datos.formulario.NIFCON %> <%- datos.formulario.NOMCON %> 
+                <div>
+                  Ejercicio: <%- datos.formulario.EJEFOR %>
+                </div>
+              </div>
+              <h2 class="page-title">
+                Referencias
+              </h2>
+            </div>
+            <div class="col-auto ms-auto d-print-none">
+              <div class="btn-list">
+                <form action="/admin/formularios/referencias" method="GET">  
+                  <div class="input-icon">
+                    <span class="input-icon-addon">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
+                        viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <circle cx="10" cy="10" r="7"></circle>
+                        <line x1="21" y1="21" x2="15" y2="15"></line>
+                      </svg>
+                    </span>
+                    <input type="text" class="form-control d-inline-block me-3" id="buscarRefeBox" name="part"
+                      placeholder="Buscar..." aria-label="Buscar en referencias">
+                  </div>
+                </form>
+                <a href="#" id="new" class="btn btn-primary d-none d-sm-inline-block">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 5l0 14"></path><path d="M5 12l14 0"></path></svg>
+                  Referencia
+                </a>
+                <a href="#" id="resp" class="btn btn-primary d-sm-none btn-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 5l0 14"></path><path d="M5 12l14 0"></path></svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="page-body">
         <div class="container-xl">
           <div class="row">
             <div class="col-12">
               <div class="card">
-                <div class="card-header">
-                  <div>
-                    <h3 class="card-title">Referencias</h3>
-                  </div>
-                  <div class="col-auto ms-auto">
-                    <div class="d-flex">
-                      <form action="/admin/formularios/referencias" method="GET">
-                        <div class="input-icon me-3">
-                          <span class="input-icon-addon">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
-                              stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                              <circle cx="10" cy="10" r="7"></circle>
-                              <line x1="21" y1="21" x2="15" y2="15"></line>
-                            </svg>
-                          </span>
-                          <input type="text" class="form-control d-inline-block me-3" id="buscarRefeBox" name="part" placeholder="Buscar..."
-                            aria-label="Buscar en referencias">
-                        </div>
-                      </form>
-                      <a href="/admin/formularios/referencias/add/<%- datos.formulario.IDFORM %>" class="btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" height="24" width="24" viewBox="0 0 24 24">
-                          <path d="M11.25 18.75v-6h-6v-1.5h6v-6h1.5v6h6v1.5h-6v6Z" />
-                        </svg>
-                        Nueva Referencia
-                      </a>
-                    </div>
-                  </div>
-                </div>
                 <div class="card-body">
                   <table class="table table-vcenter table-striped sortable" id="tblRefes">
                     <thead>
                       <tr class="header">
-                        <th class="w-4"></th>
+                        <th class="w-5"></th>
                         <th class="w-6">Fecha</th>
                         <th class="w-8">NIF</th>
                         <th>Tipo</th>
@@ -64,13 +92,15 @@
                     <tbody id="table-body">
                     </tbody>
                   </table>
-                  <div id="pagination-wrapper" class="py-1"></div>
-                </div>                
-                <div class="card-footer">
-                  <div class="ms-auto d-flex py-1">
-                    <a href="" id="vol" class="btn btn-white">Volver</a>
+                  <div class="row text-center align-items-center flex-row-reverse">
+                    <div class="col-lg-auto ms-lg-auto">
+                      <div id="pagination-wrapper" class="nav py-1"></div>
+                    </div>
+                    <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+                      <a href="" id="volv" class="btn btn-white">Volver</a>
+                    </div>
                   </div>
-                </div>
+                </div>                
               </div>
             </div>
           </div>
@@ -118,13 +148,19 @@
   </div>
 
   <script>
-    const orgList = <%- JSON.stringify(datos.referencias) %>
-    const cursor = <%- JSON.stringify(datos.cursor) %>
     const hasNexts = <%- datos.hasNexts %>
+    </script>
+  <script>
     const hasPrevs = <%- datos.hasPrevs %>
   </script>
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/indexReferencias.min.js"></script>
+  <script>
+    const formulario = <%- JSON.stringify(datos.formulario) %>
+  </script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/formularios/referencias/index.js"></script>
+  <script>
+    buildTable(<%- JSON.stringify(datos.referencias) %>, <%- JSON.stringify(datos.cursor) %>)
+  </script>
 </body>
 
 </html>
