--- a/src/views/admin/formularios/resueltos/index.ejs
+++ b/src/views/admin/formularios/resueltos/index.ejs
@@ -9,62 +9,89 @@
   <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
   <!-- styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/dots-menu.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/table.css">
+  <link rel="stylesheet" href="/css/pagination.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/list.css">  
+  <link rel="stylesheet" href="/css/drops.css">
+  <link rel="stylesheet" href="/css/avatar.css">
+  <link rel="stylesheet" href="/css/modal.css">
 </head>
 
-<body class="antialiased">
-  <div class="wrapper">
+<body>
+  <div class="page">
     <%- include('../../../partials/header') %>
-      <%- include('../../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
-        <div class="page-wrapper">
-          <div class="page-body">
-            <div class="container-xl">
-              <div class="row">
-                <div class="col-12">
-                  <div class="card">
-                    <div class="card-header">
-                      <h3 class="card-title">Resueltos</h3>
-                      <div class="col-auto ms-auto">
-                        <div class="d-flex">
-                          <form action="/admin/formularios/resueltos" method="GET">
-                            <div class="input-icon me-3">
-                              <span class="input-icon-addon">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
-                                  viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                                  stroke-linecap="round" stroke-linejoin="round">
-                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                  <circle cx="10" cy="10" r="7"></circle>
-                                  <line x1="21" y1="21" x2="15" y2="15"></line>
-                                </svg>
-                              </span>
-                              <input type="text" class="form-control d-inline-block me-3" id="buscarFormBox"
-                                name="part" placeholder="Buscar..." aria-label="Buscar en formularios">
-                            </div>
-                          </form>
-                          <a href="" id="pen" class="btn">
-                            Pendientes/Asignados
-                          </a>
-                        </div>
-                      </div>
+    <%- include('../../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
+    <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Resueltos
+              </div>
+              <h2 class="page-title">
+                Formularios
+              </h2>
+            </div>
+            <div class="col-auto ms-auto d-print-none">
+              <div class="btn-list">
+                <form action="/admin/formularios/resueltos" method="GET">  
+                  <div class="input-icon">
+                    <span class="input-icon-addon">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
+                        viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <circle cx="10" cy="10" r="7"></circle>
+                        <line x1="21" y1="21" x2="15" y2="15"></line>
+                      </svg>
+                    </span>
+                    <input type="text" class="form-control d-inline-block me-3" id="buscarFormBox" name="part"
+                      placeholder="Buscar..." aria-label="Buscar en formularios">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="page-body">
+        <div class="container-xl">
+          <div class="row">
+            <div class="col-12">
+              <div class="card card-md">
+                <div class="card-body">
+                  <table class="table table-vcenter table-striped sortable" id="tblFormularios">
+                    <thead>
+                      <tr class="header">
+                        <th class="w-5"></th>
+                        <th class="w-7">Oficina</th>
+                        <th class="w-6">Ejerc</th>
+                        <th class="w-7">Referencia</th>
+                        <th class="w-7">NIF</th>
+                        <th class="w-20">Nombre</th>
+                        <th class="w-10">Tipo</th>
+                        <th class="w-15">Observaciones</th>
+                        <th class="w-5"></th>
+                      </tr>
+                    </thead>
+                    <tbody id="table-body">
+                    </tbody>
+                  </table>
+                  <div class="row text-center align-items-center flex-row-reverse">
+                    <div class="col-lg-auto ms-lg-auto">
+                      <div id="pagination-wrapper" class="nav py-1"></div>
                     </div>
-                    <div class="card-body">
-                      <table class="table table-vcenter table-striped sortable" id="tblFormularios">
-                        <thead>
-                          <tr class="header">
-                            <th class="w-4"></th>
-                            <th class="w-8">Oficina</th>
-                            <th class="w-5">Ejerc</th>
-                            <th class="w-6">Referenc</th>
-                            <th class="w-7">NIF</th>
-                            <th class="w-25">Nombre</th>
-                            <th class="w-15">Tipo</th>
-                            <th>Observaciones</th>
-                            <th class="w-5"></th>
-                          </tr>
-                        </thead>
-                        <tbody id="table-body">
-                        </tbody>
-                      </table>
-                      <div id="pagination-wrapper" class="py-1"></div>
+                    <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+                      <a href="#" id="res" class="btn btn-white">Volver</a>
                     </div>
                   </div>
                 </div>
@@ -72,18 +99,58 @@
             </div>
           </div>
         </div>
-        <%- include('../../../partials/footer') %>
+      </div>
+    </div>
+    <%- include('../../../partials/footer') %>
+  </div>
+
+  <!-- modales -->
+  <div class="modal modal-blur fade" id="modal-desasignar" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal-status bg-danger"></div>
+        <div class="modal-body text-center py-4">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-danger icon-lg" width="24" height="24"
+            viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M12 9v2m0 4v.01"></path>
+            <path d="M5 19h14a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-7.1 12.25a2 2 0 0 0 1.75 2.75"></path>
+          </svg>
+          <h3>Desasignar formulario resuelto</h3>
+          <div id="msgdes"></div>
+        </div>
+        <div class="modal-footer">
+          <div class="w-100">
+            <div class="row">
+              <div class="col">
+                <a href="" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
+              </div>
+              <div class="col">
+                <form action="/admin/formularios/desasignar" method="POST">
+                  <input type="hidden" id="iddesa" name="idform" value="">
+                  <button type="submit" class="btn btn-danger w-100">Desasignar formulario</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script>
-    const orgList = <%- JSON.stringify(datos.formularios) %>
-    const estados = <%- JSON.stringify(datos.estadosDocumento) %>
-    const cursor = <%- JSON.stringify(datos.cursor) %>
     const hasNexts = <%- datos.hasNexts %>
+  </script>
+  <script>
     const hasPrevs = <%- datos.hasPrevs %>
   </script>
-  <script src="/js/ayuda.min.js"></script>
-  <script src="/js/admin/indexResueltos.min.js"></script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/formularios/resueltos/index.js"></script>
+  <script>
+    buildTable(<%- JSON.stringify(datos.formularios) %>, <%- JSON.stringify(datos.cursor) %>)
+  </script>
 </body>
 
 </html>
