--- a/src/views/admin/usuarios/index.ejs
+++ b/src/views/admin/usuarios/index.ejs
@@ -60,7 +60,7 @@
                 </form>
                 <a href="#" id="new" class="btn btn-primary d-none d-sm-inline-block">
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 5l0 14"></path><path d="M5 12l14 0"></path></svg>
-                  Nuevo usuario
+                  Nuevo
                 </a>
                 <a href="#" id="resp" class="btn btn-primary d-sm-none btn-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 5l0 14"></path><path d="M5 12l14 0"></path></svg>
@@ -80,8 +80,8 @@
                     <thead>
                       <tr class="header">
                         <th class="w-5"></th>
-                        <th class="w-50">Nombre</th>
-                        <th class="w-10">Oficina</th>
+                        <th class="w-75">Nombre</th>
+                        <th class="w-15">Oficina</th>
                         <th class="w-5"></th>
                       </tr>
                     </thead>
